--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>management-user-login</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
